--- a/.drone.yml
+++ b/.drone.yml
@@ -4,3 +4,4 @@ data:
     node: 20.10.0
     lambdaFunctionName: Alexa-HomeAssistant-OAuthToken-Connector
     region: eu-west-1
+    pathDist: 'dist'
